2010-07-27  Maxim Kuvyrkov  <maxim@codesourcery.com>

	* dbgcnt.def (hoist_insn): New debug counter.
	* gcse.c (hoist_code): Use it.

2010-07-27  Xinliang David Li  <davidxl@google.com>

	* tree-ssa-loop-ivopts.c (niter_for_exit): New parameter.
	(niter_for_single_dom_exit): Passes additional parameter.
	(iv_period): Fix comments.
	(may_eliminate_iv): Handles multiple exit loops properly.
	(free_tree_niter_desc): New function.
	(free_loop_data): Frees up loop iteration descriptors.

2010-07-27  Jakub Jelinek  <jakub@redhat.com>

	PR target/44542
	* cfgexpand.c (expand_one_stack_var_at): Limit align to maximum
	of max_used_stack_slot_alignment and PREFERRED_STACK_BOUNDARY
	instead of MAX_SUPPORTED_STACK_ALIGNMENT.
	(expand_one_var): Don't consider DECL_ALIGN for variables for
	which expand_one_stack_var_at has been already called.

	PR testsuite/44701
	* doc/md.texi: Clarify m and es constraints on PowerPC and m and S
	constraints on IA-64.

2010-07-27  Jie Zhang  <jie@codesourcery.com>

	PR target/44290
	Revert
	2010-07-23  Jie Zhang  <jie@codesourcery.com>
	* tree-sra.c (ipa_sra_preliminary_function_checks): Return
	false if ! tree_versionable_function_p.

2010-07-27  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (add_data_member_location_attribute): Use
	add_AT_unsigned instead of add_AT_int if offset is non-negative.

2010-07-27  Bernd Schmidt  <bernds@codesourcery.com>

	* postreload.c (try_replace_in_use): New static function.
	(reload_combine_recognize_const_pattern): Use it here.  Allow
	substituting into a final add insn, and substituting into a memory
	reference in an insn that sets the reg.

2010-07-27  Joseph Myers  <joseph@codesourcery.com>

	* common.opt (o): Add MissingArgError.
	* doc/options.texi (MissingArgError): Document.
	* hooks.c (hook_bool_constcharptr_size_t_false): Remove.
	* hooks.h (hook_bool_constcharptr_size_t_false): Remove.
	* langhooks-def.h (LANG_HOOKS_MISSING_ARGUMENT): Remove.