@@ -1,3 +1,8 @@
+2010-07-27  Xinliang David Li  <davidxl@google.com>
+
+	* tree-ssa-loop-ivopts.c (adjust_iv_update_pos): New function.
+	(rewrite_use_address): Adjust iv update position when needed.
+
 2010-07-27  Maxim Kuvyrkov  <maxim@codesourcery.com>
 
 	* dbgcnt.def (hoist_insn): New debug counter.
